[package]
name = "hlescapebot"
version = "0.1.0-archive.1"
edition = "2021"
authors = ["hlescapebot-contributors"]
description = "Archived Rust Hyperliquid CLI recovery workflow using hypersdk"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hypersdk = { git = "https://github.com/infinitefield/hypersdk.git", rev = "2d24846a3c689401f6541a4da4e5b5054e88dddd" }
dotenv = "1.5"
anyhow = "1.0"
rust_decimal = "1"
